# sesh

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
scripts/: gen-icons.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs
src/components/: BeatStrip.tsx  ClickPicker.tsx  DevicePanel.tsx  RecordOrb.tsx  ShaderCanvas.tsx  Splash.tsx  TakesShelf.tsx  TempoDial.tsx  VuMeter.tsx
src/hooks/: useLevelMeter.ts  useRecorder.ts
src/lib/: metronome.ts  state.ts  tauri.ts  util.ts
src/shaders/: brew.ts  drift.ts
