[package]
name = "sesh"
version = "0.1.0"
description = "Personal session recorder"
authors = ["Ryan Haygood"]
edition = "2021"

[lib]
name = "sesh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
parking_lot = "0.12"
anyhow = "1"
thiserror = "1"
dirs = "5"
crossbeam-channel = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
